# pyduckgo

./: README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
pyduckgo/: __init__.py  core.py  models.py
tests/: test_search.py
