[project]
name = "pyduckgo"
version = "1.0.0"
description = "Simple async wrapper for DuckDuckGo"
readme = "README.md"
license = "MIT"
keywords = ["api", "duckduckgo", "python"]
requires-python = ">=3.10"
authors = [
    { name = "Daniel Zakharov", email = "gzdan734@gmail.com" }
]
dependencies = [
    "aiohttp>=3.13.3",
    "msgspec>=0.20.0",
    "selectolax>=0.4.6",
]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
norecursedirs = ".svn _build tmp*"
testpaths = "tests"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
